--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "[20640 rows x 10 columns]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "Name: ocean_proximity, dtype: int64"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "Name: median_house_value, dtype: float64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
        "[20433 rows x 10 columns]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
        "[20433 rows x 1 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        "[20433 rows x 10 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
        "Name: ocean_proximity, Length: 20433, dtype: float64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1322,7 +1322,7 @@
        "max         500001.000000         4.000000  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1333,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # scaling data minmaxslcar\n",
+    "# #\n",
+    "# from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# scaler = MinMaxScaler()\n",
+    "\n",
+    "# temp = scaler.fit_transform(data[['population']])\n",
+    "\n",
+    "# data = data.drop(['population'], axis=1)\n",
+    "# data['population'] = temp\n",
+    "\n",
+    "# data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,17 +1425,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-4.24904587e+04 -4.22434643e+04  1.13966057e+03 -8.83172540e+00\n",
-      "  1.10608006e+02 -3.86086831e+01  5.56479101e+01  4.04237280e+04\n",
-      " -3.17927565e+02]\n",
-      "-3566176.110225042\n"
+      "[-4.30760910e+04 -4.28571573e+04  1.13458327e+03 -8.72109885e+00\n",
+      "  1.14784456e+02 -3.81974853e+01  4.73247997e+01  4.04090123e+04\n",
+      " -1.10799699e+02]\n",
+      "-3613361.196593352\n"
      ]
     }
    ],
@@ -1427,14 +1447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69471.42321337691\n"
+      "69716.85208119759\n"
      ]
     }
    ],
@@ -1449,8 +1469,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cross validation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([67873.12896353, 68407.569175  , 72550.93602096, 71221.93723385,\n",
+       "       69736.63992225, 71738.6052631 , 68688.38270677, 69234.11345147,\n",
+       "       70422.26102867, 70483.3623262 ])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(lin_reg, X_train, y_train, scoring=\"neg_mean_squared_error\", cv=10)\n",
+    "np.sqrt(-scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1730,7 @@
        "[20433 rows x 10 columns]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
